[project]
name = "octopilot"
version = "0.1.0"
description = ""
authors = [
    {name = "Grishkevich Sergey"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "moderngl (>=5.12.0,<6.0.0)",
    "window (>=0.0.3,<0.0.4)",
    "moderngl (>=5.12.0,<6.0.0)",
    "moderngl-window (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
